infra/k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: mini-ecommerce
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: foyezar/ecommerce-auth
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: mini-ecommerce
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
