infra/k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: mini-ecommerce
spec:
  selector:
    matchLabels:
      app: orders
  replicas: 1
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: foyezar/ecommerce-orders
          ports:
            - containerPort: 3003
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: mini-ecommerce
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
