infra/k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
  namespace: mini-ecommerce
spec:
  selector:
    matchLabels:
      app: products
  replicas: 1
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: foyezar/ecommerce-products
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: mini-ecommerce
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
